@@ -1813,7 +1813,7 @@
         assembler is started, enter the option(s) and file(s) to  assem-
         ble following the 'argv:' prompt:  
 
-        argv:  [-dqxgalosf] file1 [file2 file3 ...  file6] 
+        argv:  [-dqxjgalcposf] file1 [file2 file3 ...  file6] 
 
         The options are:  
 
@@ -1824,6 +1824,7 @@
                         The listing radix affects the
                         .lst, .rel, and .sym files.
         
+                j       add line number and debug information to file
                 g       undefined symbols made global
                 a       all user symbols made global
         
@@ -1837,6 +1838,11 @@
         
                 f       by  `   in the listing file
                 ff      by mode in the listing file
+
+        asx8051 specific command line option:
+                -I<dir>  Add the named directory to the include file
+                        search path.  This option may be used more than once.
+                        Directories are searched in the order given.
 
            The file name for the .lst, .rel, and .sym files is the first
         file name specified in the command line.  All output  files  are
@@ -1853,7 +1859,11 @@
         (s) option, the symbol table is placed at the end of the listing
         file.  
 
-
+        ASXXXX assembles supported by and distributed with SDCC are:
+                asx8051         (Intel 8051)
+                as-z80          (Zilog Z80 / Hitachi HD64180)
+                as-gbz80        (GameBoy Z80-like CPU)
+                as-hc08         (Motorola 68HC08)
 
 
         THE ASSEMBLER                                          PAGE 1-28
